force-app/main/default/objects/Panel_Review__c/Panel_Review__c.object-meta.xml
<CustomObject>
    <label>MD Review</label>
    <nameField>
        <displayFormat>MDR-{0000}</displayFormat>
        <label>Panel Review #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MD Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>