force-app/main/default/objects/Panel_Review__c/fields/Acct_ID__c.field-meta.xml
<CustomField>
    <fullName>Acct_ID__c</fullName>
    <formula>Case__r.Program_Acct_ID__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acct ID</label>
    <type>Text</type>
</CustomField>