force-app/main/default/objects/Panel_Review__c/fields/Appeal_Officer__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Officer__c</fullName>
    <formula>Case__r.Assigned_RN__c</formula>
    <label>Appeal Officer</label>
    <type>Text</type>
</CustomField>