force-app/main/default/objects/Panel_Review__c/fields/Authorized_By__c.field-meta.xml
<CustomField>
    <fullName>Authorized_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Authorized By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Panel_Review_Authorizers</relationshipName>
    <type>Lookup</type>
</CustomField>