force-app/main/default/objects/Panel_Review__c/fields/Authorized_Date__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Date__c</fullName>
    <label>Authorized Date</label>
    <type>Date</type>
</CustomField>