force-app/main/default/objects/Panel_Review__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Panel_Reviewer</relationshipName>
    <type>Lookup</type>
</CustomField>