force-app/main/default/objects/Panel_Review__c/fields/Case_Number_Layout__c.field-meta.xml
<CustomField>
    <fullName>Case_Number_Layout__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Case__c,Case__r.Document_Case_Number__c , &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Number</label>
    <type>Text</type>
</CustomField>