force-app/main/default/objects/Panel_Review__c/fields/Date_Of_Revision__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Revision__c</fullName>
    <label>Date Of Revision</label>
    <type>Date</type>
</CustomField>