force-app/main/default/objects/Panel_Review__c/fields/Date_returned_to_MMS__c.field-meta.xml
<CustomField>
    <fullName>Date_returned_to_MMS__c</fullName>
    <label>Date returned to MMS</label>
    <type>DateTime</type>
</CustomField>