force-app/main/default/objects/Panel_Review__c/fields/Date_sent_to_Expert__c.field-meta.xml
<CustomField>
    <fullName>Date_sent_to_Expert__c</fullName>
    <label>Date Sent to Reviewer</label>
    <type>Date</type>
</CustomField>