force-app/main/default/objects/Panel_Review__c/fields/Decision_Code__c.field-meta.xml
<CustomField>
    <fullName>Decision_Code__c</fullName>
    <formula>TEXT(Program_Review_Decision__r.Decision_Code__c)</formula>
    <label>Decision Code</label>
    <type>Text</type>
</CustomField>