force-app/main/default/objects/Panel_Review__c/fields/Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Method__c</fullName>
    <defaultValue>&apos;MERA Web Form&apos;</defaultValue>
    <label>Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MERA Web Form</fullName>
                <default>true</default>
                <label>MERA Web Form</label>
            </value>
            <value>
                <fullName>MERA Word Document</fullName>
            </value>
            <value>
                <fullName>MOVEit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>