force-app/main/default/objects/Panel_Review__c/fields/Do_Not_Use__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Use__c</fullName>
    <formula>&apos;PMT&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Do Not Use</label>
    <type>Text</type>
</CustomField>