force-app/main/default/objects/Panel_Review__c/fields/Document_Date_Returned_to_MMS__c.field-meta.xml
<CustomField>
    <fullName>Document_Date_Returned_to_MMS__c</fullName>
    <formula>DATEVALUE( Date_returned_to_MMS__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document Date Returned to MMS</label>
    <type>Date</type>
</CustomField>