force-app/main/default/objects/Panel_Review__c/fields/Document_File_Name__c.field-meta.xml
<CustomField>
    <fullName>Document_File_Name__c</fullName>
    <formula>IF(ISNULL(Expert_review_Name__c), Case__r.Document_Case_Number__c+&apos;_&apos;+TEXT(Review_Number__c) +&apos;_Review Form&apos;, Case__r.Document_Case_Number__c+&apos;_&apos;+TEXT(Review_Number__c) +&apos;_Review Form&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document File Name</label>
    <type>Text</type>
</CustomField>