force-app/main/default/objects/Panel_Review__c/fields/Document_Initials__c.field-meta.xml
<CustomField>
    <fullName>Document_Initials__c</fullName>
    <formula>Case__r.Document_Enrollee_Initials__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document Initials</label>
    <type>Text</type>
</CustomField>