force-app/main/default/objects/Panel_Review__c/fields/Document_List__c.field-meta.xml
<CustomField>
    <fullName>Document_List__c</fullName>
    <label>Document List</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>