force-app/main/default/objects/Panel_Review__c/fields/EST_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>EST_Created_Date__c</fullName>
    <formula>IF( ISPICKVAL(CreatedBy.TimeZoneSidKey, &apos;America/Chicago&apos;), CreatedDate + 60/1440, 

IF(ISPICKVAL(CreatedBy.TimeZoneSidKey, &apos;America/Denver&apos;),CreatedDate + 120/1440,


IF(ISPICKVAL(CreatedBy.TimeZoneSidKey, &apos;America/Phoenix&apos;),CreatedDate + 180/1440,


IF(ISPICKVAL(CreatedBy.TimeZoneSidKey, &apos;America/Los_Angeles&apos;),CreatedDate + 180/1440,CreatedDate))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EST Created Date</label>
    <type>DateTime</type>
</CustomField>