force-app/main/default/objects/Panel_Review__c/fields/Expert_Attestation_Date__c.field-meta.xml
<CustomField>
    <fullName>Expert_Attestation_Date__c</fullName>
    <label>Reviewer Attestation Date</label>
    <type>Date</type>
</CustomField>