force-app/main/default/objects/Panel_Review__c/fields/Expert_Email__c.field-meta.xml
<CustomField>
    <fullName>Expert_Email__c</fullName>
    <formula>Expert_Review__r.Contact_Email_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expert Email</label>
    <type>Text</type>
</CustomField>