force-app/main/default/objects/Panel_Review__c/fields/Expert_Review__c.field-meta.xml
<CustomField>
    <fullName>Expert_Review__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MD Reviewer</label>
    <referenceTo>Expert_Review__c</referenceTo>
    <relationshipLabel>MD Reviews</relationshipLabel>
    <relationshipName>Panel_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>