force-app/main/default/objects/Panel_Review__c/fields/Expert_review_Name__c.field-meta.xml
<CustomField>
    <fullName>Expert_review_Name__c</fullName>
    <formula>Expert_Review__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expert review Name</label>
    <type>Text</type>
</CustomField>