force-app/main/default/objects/Panel_Review__c/fields/Expert_Speciality_f__c.field-meta.xml
<CustomField>
    <fullName>Expert_Speciality_f__c</fullName>
    <formula>Expert_Review__r.Specialities__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expert Speciality</label>
    <type>Text</type>
</CustomField>