force-app/main/default/objects/Panel_Review__c/fields/Expert_Specialty__c.field-meta.xml
<CustomField>
    <fullName>Expert_Specialty__c</fullName>
    <label>Expert Specialty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Review_Speciality</valueSetName>
    </valueSet>
</CustomField>