force-app/main/default/objects/Panel_Review__c/fields/Formatted_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Formatted_Case_Number__c</fullName>
    <formula>Case__r.Program_Code__c + RIGHT(TEXT(YEAR( DATEVALUE(Case__r.CreatedDate) )), 2) + &apos;-&apos; + Case__r.Case_Sequence__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formatted Case Number</label>
    <type>Text</type>
</CustomField>