force-app/main/default/objects/Panel_Review__c/fields/Invoice_Flag__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Flag__c</fullName>
    <formula>&apos;SALESFORCE ERIC CM&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Flag</label>
    <type>Text</type>
</CustomField>