force-app/main/default/objects/Panel_Review__c/fields/Invoice_ID__c.field-meta.xml
<CustomField>
    <fullName>Invoice_ID__c</fullName>
    <formula>Formatted_Case_Number__c + &apos;-&apos; +TEXT( Review_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice ID</label>
    <type>Text</type>
</CustomField>