force-app/main/default/objects/Panel_Review__c/fields/Last_Date_Current_Month__c.field-meta.xml
<CustomField>
    <fullName>Last_Date_Current_Month__c</fullName>
    <formula>IF( MONTH( TODAY() ) = 12, 
DATE( YEAR( TODAY() ), 12, 31 ), 
DATE( YEAR( TODAY() ), MONTH( TODAY() ) + 1, 1) - 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Date Current Month</label>
    <type>Date</type>
</CustomField>