force-app/main/default/objects/Panel_Review__c/fields/MD_Decision__c.field-meta.xml
<CustomField>
    <fullName>MD_Decision__c</fullName>
    <label>MD Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I find the requested services were/are NOT medically necessary</fullName>
            </value>
            <value>
                <fullName>I find the requested services were/are medically necessary</fullName>
            </value>
            <value>
                <fullName>I find SOME of the requested services were/are medically necessary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>