force-app/main/default/objects/Panel_Review__c/fields/Medical_Records_Status__c.field-meta.xml
<CustomField>
    <fullName>Medical_Records_Status__c</fullName>
    <formula>IF

(Case__r.Document_Status__c== &apos;Failed&apos;,

 &quot;Failed&quot;,

IF

(Case__r.Document_Status__c== &apos;Passed&apos;,

 &quot;Passed&quot;,

IF

(Case__r.Document_Status__c == &apos;Processing&apos;,

 &quot;Processing&quot;,&apos;&apos;
)

)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Medical Records</label>
    <type>Text</type>
</CustomField>