force-app/main/default/objects/Panel_Review__c/fields/MERA_Review_Status__c.field-meta.xml
<CustomField>
    <fullName>MERA_Review_Status__c</fullName>
    <formula>IF(TEXT(  Review_Status__c ) == &apos;Assignment Offered&apos;, &apos;open&apos;, IF( (TEXT( Review_Status__c) == &apos;Review Returned&apos;  || TEXT( Review_Status__c) == &apos;Review Accepted&apos;), &apos;closed&apos;, &apos;&apos;))</formula>
    <label>MERA Review Status</label>
    <type>Text</type>
</CustomField>