force-app/main/default/objects/Panel_Review__c/fields/Mode_Of_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Mode_Of_Assignment__c</fullName>
    <label>Mode Of Assignment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Automated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>