force-app/main/default/objects/Panel_Review__c/fields/Non_Std_Payment__c.field-meta.xml
<CustomField>
    <fullName>Non_Std_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non-Std Payment</label>
    <type>Checkbox</type>
</CustomField>