force-app/main/default/objects/Panel_Review__c/fields/Org_ID__c.field-meta.xml
<CustomField>
    <fullName>Org_ID__c</fullName>
    <formula>Case__r.Program_Org_ID__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Org ID</label>
    <type>Text</type>
</CustomField>