force-app/main/default/objects/Panel_Review__c/fields/Override__c.field-meta.xml
<CustomField>
    <fullName>Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Reviewer Rate</label>
    <type>Checkbox</type>
</CustomField>