force-app/main/default/objects/Panel_Review__c/fields/Override_Reason_Other__c.field-meta.xml
<CustomField>
    <fullName>Override_Reason_Other__c</fullName>
    <label>Override Reason (Other)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>