force-app/main/default/objects/Panel_Review__c/fields/Panel_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Panel_Payment_Amount__c</fullName>
    <formula>Review_Fee__r.Fee_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Panel Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>