force-app/main/default/objects/Panel_Review__c/fields/Participants__c.field-meta.xml
<CustomField>
    <fullName>Participants__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Participants</label>
    <referenceTo>Participant__c</referenceTo>
    <relationshipName>Panel_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>