force-app/main/default/objects/Panel_Review__c/fields/Payment_Comments__c.field-meta.xml
<CustomField>
    <fullName>Payment_Comments__c</fullName>
    <label>Payment Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>