force-app/main/default/objects/Panel_Review__c/fields/Payment_Period__c.field-meta.xml
<CustomField>
    <fullName>Payment_Period__c</fullName>
    <label>Payment Period</label>
    <length>70</length>
    <type>Text</type>
</CustomField>