force-app/main/default/objects/Panel_Review__c/fields/Program_Priority__c.field-meta.xml
<CustomField>
    <fullName>Program_Priority__c</fullName>
    <formula>Case__r.Program_Priority__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Priority</label>
    <type>Text</type>
</CustomField>