force-app/main/default/objects/Panel_Review__c/fields/Program_Review_Decision__c.field-meta.xml
<CustomField>
    <fullName>Program_Review_Decision__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Review Decision</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Program_Priority__c.Program_Review_Type__c</field>
            <operation>equals</operation>
            <valueField>$Source.Reference_Data__c</valueField>
        </filterItems>
        <filterItems>
            <field>Program_Priority__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Review Decision</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Program_Priority__c</referenceTo>
    <relationshipName>Panel_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>