force-app/main/default/objects/Panel_Review__c/fields/Program_Review_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Review_Type__c</fullName>
    <formula>Case__r.Program_Review_Type__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Review Type</label>
    <type>Text</type>
</CustomField>