force-app/main/default/objects/Panel_Review__c/fields/Project_ID__c.field-meta.xml
<CustomField>
    <fullName>Project_ID__c</fullName>
    <formula>Case__r.Program_Project_ID__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project ID</label>
    <type>Text</type>
</CustomField>