force-app/main/default/objects/Panel_Review__c/fields/Rating_Stars__c.field-meta.xml
<CustomField>
    <fullName>Rating_Stars__c</fullName>
    <formula>IF(
    ISBLANK(TEXT( Review_Rating__c )),
    NULL,
    IMAGE(
        &quot;/img/samples/stars_&quot; + TEXT(Review_Rating__c) + &quot;00.gif&quot;,
        &quot;Rating Level&quot;
    )
)</formula>
    <label>Review Rating</label>
    <type>Text</type>
</CustomField>