force-app/main/default/objects/Panel_Review__c/fields/Recommended_Speciality__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Speciality__c</fullName>
    <formula>Case__r.Recommended_Speciality__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recommended Speciality</label>
    <type>Text</type>
</CustomField>