force-app/main/default/objects/Panel_Review__c/fields/Reference_Data__c.field-meta.xml
<CustomField>
    <fullName>Reference_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reference Data</label>
    <referenceTo>Program_Review_Type__c</referenceTo>
    <relationshipName>Panel_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>