force-app/main/default/objects/Panel_Review__c/fields/Refusal_Reason__c.field-meta.xml
<CustomField>
    <fullName>Refusal_Reason__c</fullName>
    <label>Refusal Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conflict of Interest</fullName>
            </value>
            <value>
                <fullName>Insufficient/missing records</fullName>
            </value>
            <value>
                <fullName>Outside Scope of Practice</fullName>
            </value>
            <value>
                <fullName>Technical Issue</fullName>
            </value>
            <value>
                <fullName>Unavailable</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>