force-app/main/default/objects/Panel_Review__c/fields/Refused_Date__c.field-meta.xml
<CustomField>
    <fullName>Refused_Date__c</fullName>
    <label>Refused Date</label>
    <type>Date</type>
</CustomField>