force-app/main/default/objects/Panel_Review__c/fields/Review_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Review_Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Review Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Review_Approvers</relationshipName>
    <type>Lookup</type>
</CustomField>