force-app/main/default/objects/Panel_Review__c/fields/Review_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Review_Approved_Date__c</fullName>
    <label>Review Approved Date</label>
    <type>Date</type>
</CustomField>