force-app/main/default/objects/Panel_Review__c/fields/Review_Fee__c.field-meta.xml
<CustomField>
    <fullName>Review_Fee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Panel Payment</label>
    <referenceTo>Fee__c</referenceTo>
    <relationshipName>Panel_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>