force-app/main/default/objects/Panel_Review__c/fields/Review_Fee_Unit__c.field-meta.xml
<CustomField>
    <fullName>Review_Fee_Unit__c</fullName>
    <formula>TEXT( Review_Fee__r.Unit__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Review Fee Unit</label>
    <type>Text</type>
</CustomField>