force-app/main/default/objects/Panel_Review__c/fields/Review_Form_Template_ID__c.field-meta.xml
<CustomField>
    <fullName>Review_Form_Template_ID__c</fullName>
    <formula>Case__r.Review_Letter_Template__r.SDoc_Template__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Review Form Template ID</label>
    <type>Text</type>
</CustomField>