force-app/main/default/objects/Panel_Review__c/fields/Review_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Review_Request_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Review Request Date</label>
    <type>Date</type>
</CustomField>