force-app/main/default/objects/Panel_Review__c/fields/Review_Returned_Date__c.field-meta.xml
<CustomField>
    <fullName>Review_Returned_Date__c</fullName>
    <label>Review Returned Date</label>
    <type>Date</type>
</CustomField>