force-app/main/default/objects/Panel_Review__c/fields/Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Review_Status__c</fullName>
    <label>Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Request Review</fullName>
            </value>
            <value>
                <fullName>Review Pending</fullName>
            </value>
            <value>
                <fullName>Review Returned</fullName>
            </value>
            <value>
                <fullName>Review Rejected</fullName>
            </value>
            <value>
                <fullName>Review Accepted</fullName>
            </value>
            <value>
                <fullName>Review Cancelled</fullName>
            </value>
            <value>
                <fullName>Needs Revision</fullName>
            </value>
            <value>
                <fullName>Assignment Accepted</fullName>
                <isActive>false</isActive>
                <label>Assignment Accepted</label>
            </value>
            <value>
                <fullName>Assignment Offered</fullName>
                <isActive>false</isActive>
                <label>Assignment Offered</label>
            </value>
            <value>
                <fullName>Assignment Rejected</fullName>
                <isActive>false</isActive>
                <label>Assignment Rejected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>