force-app/main/default/objects/Panel_Review__c/fields/Reviewer_Number_of_Hours__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_Number_of_Hours__c</fullName>
    <label>Reviewer Number of Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>