force-app/main/default/objects/Panel_Review__c/fields/Reviewers_fee__c.field-meta.xml
<CustomField>
    <fullName>Reviewers_fee__c</fullName>
    <label>Authorized Amount</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>