force-app/main/default/objects/Panel_Review__c/fields/Revision_Number__c.field-meta.xml
<CustomField>
    <fullName>Revision_Number__c</fullName>
    <label>Revision Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>