force-app/main/default/objects/Panel_Review__c/fields/RF_Template_id__c.field-meta.xml
<CustomField>
    <fullName>RF_Template_id__c</fullName>
    <formula>IF( Review_Form_Template_ID__c = null &amp;&amp; (  Case__r.Program_Acct_ID__r.Program_Code__c ) = &apos;MA&apos;, 
&quot;MA Medical Necessity Review Form,MA Continuation of Coverage Review Form&quot;, Review_Form_Template_ID__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RF Template id</label>
    <type>Text</type>
</CustomField>