force-app/main/default/objects/Panel_Review__c/fields/Search_Number__c.field-meta.xml
<CustomField>
    <fullName>Search_Number__c</fullName>
    <label>Search Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>