force-app/main/default/objects/Panel_Review__c/fields/Status_authorization_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Status_authorization_Coverage__c</fullName>
    <formula>IF(CONTAINS(Priority__c,&quot;Expedited&quot;), &quot;authorization and coverage&quot;, &quot;coverage&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status authorization/Coverage</label>
    <type>Text</type>
</CustomField>