force-app/main/default/objects/Panel_Review__c/fields/testing__c.field-meta.xml
<CustomField>
    <fullName>testing__c</fullName>
    <formula>Case__r.Program_Acct_ID__r.Program_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>testing</label>
    <type>Text</type>
</CustomField>