force-app/main/default/objects/Panel_Review__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>Fee Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Fee_Unit</valueSetName>
    </valueSet>
</CustomField>