force-app/main/default/objects/Panel_Review__c/fields/Vendor_ID__c.field-meta.xml
<CustomField>
    <fullName>Vendor_ID__c</fullName>
    <formula>Expert_Review__r.Vendor_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor ID</label>
    <type>Text</type>
</CustomField>