force-app/main/default/objects/Panel_Review__c/fields/Why_revision_is_needed__c.field-meta.xml
<CustomField>
    <fullName>Why_revision_is_needed__c</fullName>
    <label>Why revision is needed?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>