force-app/main/default/objects/Panel_Review__c/validationRules/Authorized.validationRule-meta.xml
<ValidationRule>
    <fullName>Authorized</fullName>
    <active>false</active>
    <description>Cannot UnAuthorized When Payment Period is populated</description>
    <errorConditionFormula>IF( (NOT( ISBLANK( Payment_Period__c ) ) ) &amp;&amp;( Authorized__c  == false) , true, false)</errorConditionFormula>
    <errorDisplayField>Authorized__c</errorDisplayField>
    <errorMessage>Cannot UnAuthorized When Payment Period is populated</errorMessage>
</ValidationRule>