force-app/main/default/objects/Panel_Review__c/validationRules/Document_List.validationRule-meta.xml
<ValidationRule>
    <fullName>Document_List</fullName>
    <active>false</active>
    <errorConditionFormula>IF(  NOT(ISNEW()) &amp;&amp; ISBLANK( Document_List__c )  , true, false)</errorConditionFormula>
    <errorDisplayField>Document_List__c</errorDisplayField>
    <errorMessage>Complete Document List field</errorMessage>
</ValidationRule>