force-app/main/default/objects/Panel_Review__c/validationRules/NumberofHours.validationRule-meta.xml
<ValidationRule>
    <fullName>NumberofHours</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
Authorized__c,
OR(ISPICKVAL(Review_Fee__r.Unit__c, &apos;Hourly&apos;),ISPICKVAL(Unit__c, &apos;Hourly&apos;)),
ISBLANK(Reviewer_Number_of_Hours__c)
)</errorConditionFormula>
    <errorMessage>Please fill &apos;Reviewer Number of Hours&apos; before authorizing the payment</errorMessage>
</ValidationRule>