force-app/main/default/objects/Panel_Review__c/validationRules/Override.validationRule-meta.xml
<ValidationRule>
    <fullName>Override</fullName>
    <active>true</active>
    <errorConditionFormula>IF( Override__c , ISPICKVAL( Override_Reason__c , &quot;&quot;), FALSE)</errorConditionFormula>
    <errorDisplayField>Override_Reason__c</errorDisplayField>
    <errorMessage>Please specify Override Reason</errorMessage>
</ValidationRule>