force-app/main/default/objects/Panel_Review__c/validationRules/Override_Reason_Other.validationRule-meta.xml
<ValidationRule>
    <fullName>Override_Reason_Other</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(Override_Reason_Other__c),
ISPICKVAL(Override_Reason__c , &apos;Other&apos;))</errorConditionFormula>
    <errorDisplayField>Override_Reason_Other__c</errorDisplayField>
    <errorMessage>Please enter an Override Reason (Other)</errorMessage>
</ValidationRule>